1. filter non contain Path class when instrument2. fix slow process of package jar 3. ready to support multi jars